--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,5 @@
-.header {
+.header 
+{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -7,6 +8,10 @@
     padding: 18px;
     width: 100%;
     overflow: hidden;
+
+    position: sticky;
+    z-index: 1;
+    top: 0;
 }
 
 .header-logo {
